manifests/uf-ace/site.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
  namespace: ace
  labels:
    app: home
    service: web
spec:
  replicas: 2
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      namespace: ace
      labels:
        app: home
        service: web
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
        - name: cache
          emptyDir:
            medium: Memory
      containers:
        - name: home
          image: ghcr.io/uf-ace/ace_website:v0.5.0@sha256:ef845072015f660839f613710e2b8e9294bdf80bbf6d08462a9c80b6f56bf54b
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /tmp
              name: tmp
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 101
            runAsGroup: 101
---
apiVersion: v1
kind: Service
metadata:
  name: home
  namespace: ace
  labels:
    service: web
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: home
