manifests/uf-ace/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ace
  namespace: ace
  labels:
    service: web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - uf-ace.com
        - www.uf-ace.com
      secretName: ace-tls
  rules:
    - host: uf-ace.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home
                port:
                  number: 80
    - host: www.uf-ace.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home
                port:
                  number: 80
